[tool.poetry]
name = "nonebot_plugin_logo"
version = "0.1.0"
description = "Nonebot2 plugin for making logo in PornHub or other styles"
authors = ["meetwq <meetwq@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
nonebot2 = "^2.0.0-alpha.15"
nonebot-adapter-cqhttp = "^2.0.0-alpha.15"
nonebot-plugin-htmlrender = "^0.0.1"
imageio = "^2.12.0"
Jinja2 = "^3.0.0"

[tool.poetry.dev-dependencies]
nb-cli = "^0.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
